Created Post resource and updated index and show views

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -3,10 +3,8 @@
     <div class="media">
         <div class="media-body">
             <h4 class="media-heading">
-                <%= link_to post.title, post %>
+                <%= link_to "Blocc's Page", post %>
             </h4>
         </div>
     </div>   
 <% end %>
-
-
