Associated users and posts

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -21,7 +21,7 @@
         <%=f.password_field :password_confirmation %>
     </div>
 </div>
-<div class="control-group">a
+<div class="control-group">
     <div class="controls">
         <%= f.submit "Sign Up", class: 'btn' %>
     </div>
@@ -32,4 +32,4 @@
     </div>
 </div>
 <% end %>
-<%= render "devise/shared/links" %>
+
