--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -14,11 +14,11 @@
     </div>
     <div class="span4">
         <h2>Amazing Point 2</h2>
-        <p>his is some content about how great point 2 is. You should really use Bloccit because of it! No seriously, it really is amazing and great and you should really check it out.</p>
+        <p>This is some content about how great point 2 is. You should really use Bloccit because of it! No seriously, it really is amazing and great and you should really check it out.</p>
     </div>
-    <div class="span 4">
+    <div class="span4">
         <h2>Amazing Point 3</h2>
-        <p>his is some content about how great point 3 is. You should really use Bloccit because of it! No seriously, it really is amazing and great and you should really check it out.</p>
+        <p>This is some content about how great point 3 is. You should really use Bloccit because of it! No seriously, it really is amazing and great and you should really check it out.</p>
     </div>
 </div>
 
