--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -3,8 +3,11 @@
     <div class="media">
         <div class="media-body">
             <h4 class="media-heading">
-                <%= link_to "Blocc's Page", post %>
+                <%= link_to "post.title", post %>
             </h4>
+            <small>
+                submitted <%= time_ago_in_words(post.created_at) %> ago by <%= post.user.name %><br/>
+            </small>
         </div>
     </div>   
 <% end %>
