--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,6 +1,7 @@
 <h1>Edit Post</h1>
 <div class="row">
     <div class="span-6">
+    <div class="span4">
         <p>Guidelines for new posts:</p>
         <ul>
             <li>Make sure content is appropriate.</li>
@@ -9,7 +10,11 @@
             <li>Blah blah blah</li>
         </ul>
     </div>
+    </div>
+
     <div class="span-6">
+    <div class="span8">
+
         <%= form_for [@topic, @post], html: {class: 'form-horizontal'} do |f| %>
             <div class="control-group">
                 <%= f.label :title, class: 'control-label' %>
@@ -23,12 +28,16 @@
                     <%= f.text_area :body, rows: 8 %>
                 </div>
             </div>
+
             <div class="control-group">
                 <div class="controls">
                     <%= f.submit "Save", class: 'btn' %>
                 </div>
             </div>
         <% end %>
+        <%= render partial: 'form', locals: { topic: @topic, post: @post} %>
+
+    </div>
     </div>
 </div>
 
