--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,7 +1,10 @@
 <h1>New Post</h1>
 
     <div class="row">
+
         <div class="span-6">
+        <div class="span4">
+
             <p>Guidelines fo new posts:</p>
             <ul>
                 <li>Make sure content is appropriate.</li>
@@ -10,7 +13,11 @@
                 <li>Blah blah blah</li>
             </ul>
         </div>
+
     <div class="span-6">
+
+    <div class="span8">
+
         <%= form_for [@topic, @post], html: { class: 'form-horizontal'} do |f| %>
             <div class="control-group">
                 <%= f.label :title, class: 'control-label' %>
@@ -32,5 +39,7 @@
     </div>
 
     <% end %>
+
+    <%= render partial: 'form', locals: { topic: @topic, post: @post} %>
     </div>
     </div>
