Installed and implemented Redcarpet for Markdown.

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,4 +1,11 @@
 <h1><%= @post.title %><h1>
+<h1><%= markdown @post.title %></h1>
+
+    <div class="span8">
+        <p><%= @post.body %></p>
+        <p><%= markdown @post.body %></p>
+    </div>
+    
 <div class="row">
     <div class="span8">
         <p><%= @post.body %></p>
