--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -13,13 +13,17 @@
             submitted <%= time_ago_in_words(@post.created_at) %> ago by
             <%= @post.user.name %>
         </small>
-        <p><%= markdown @post.body %></p>
+        <p><%= markdown @post.body %></p>  
+            <%= image_tag(@post.image.url) if @post.image? %>
     </div>
 </div>
+<br>
+<div class="row">
     <div class="span4">
         <% if can? :edit, @post %>
             <%= link_to "Edit", edit_topic_post_path(@topic,@post), class: 'btn btn-large btn-block' %>
         <% end %>
     </div>
 
+</div>
 
