--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -14,6 +14,7 @@
                 </div>
             </div>
         <% end %>
+        <%= will_paginate @topics %>
     </div>
     <div class="span 4">
         <% if can? :create, Topic %>
