--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,10 +1,4 @@
-<h1><%= @post.title %><h1>
 <h1><%= markdown @post.title %></h1>
-
-    <div class="span8">
-        <p><%= @post.body %></p>
-        <p><%= markdown @post.body %></p>
-    </div>
 
 <div class="row">
     <div class="span8">
@@ -14,16 +8,34 @@
             <%= @post.user.name %>
         </small>
         <p><%= markdown @post.body %></p>  
-            <%= image_tag(@post.image.url) if @post.image? %>
+           <p><%= image_tag(@post.image.url) if @post.image? %></p>
+           <hr/>
+
+        <h2><%= @comments.count %> Comments</h2>
+        <%= render @comments %>
+        <%# @comments.each do |comment| %>
+            <%#= render partial 'comments/comment', locals: {comment: comment}
+        <%# end %>
+        <% if can? :create, Comment %>
+            <hr/>
+
+            <h4>New Comment</h4>
+             <%= render partial: 'comments/form', locals: {topic: @topic, post: @post, comment: @comment} %>
+        <% end %>
     </div>
-</div>
+
 <br>
 <div class="row">
     <div class="span4">
         <% if can? :edit, @post %>
             <%= link_to "Edit", edit_topic_post_path(@topic,@post), class: 'btn btn-large btn-block' %>
         <% end %>
+        <% if can? :destroy, @post %>
+            <% link_to "Delete Post", [@topic, @post], method: :delete, class: 'btn btn-large btn-block btn-danager', confirm: 'Are you sure you want to delete this post?' %>
+        <% end %>
     </div>
 
 </div>
+
+    
 
