--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,7 +1,8 @@
-<h1><%= markdown @post.title %></h1>
 
 <div class="row">
     <div class="span8">
+        <%= render partial: 'votes/voter', locals: { topic: @topic, post: @post} %>
+             <h1><%= markdown @post.title %></h1>  
         <small>
             <%= image_tag(@post.user.avatar.tiny.url) if @post.user.avatar? %>
             submitted <%= time_ago_in_words(@post.created_at) %> ago by
@@ -33,6 +34,14 @@
         <% if can? :destroy, @post %>
             <% link_to "Delete Post", [@topic, @post], method: :delete, class: 'btn btn-large btn-block btn-danager', confirm: 'Are you sure you want to delete this post?' %>
         <% end %>
+    </div>
+
+    <div class="span4">
+        <h3><%= pluralize(@post.points, 'point') %></h3>
+        <small>
+            <%= pluralize(@post.up_votes, 'up vote') %>
+            <%= pluralize(@post.down_votes, 'down vote') %>
+        </small>
     </div>
 
 </div>
