Changed Topics to topics

--- a/app/views/topics/posts/show.html.erb
+++ b/app/views/topics/posts/show.html.erb
@@ -13,7 +13,7 @@
            <hr/>
 
         <h2><%= @comments.count %> Comments</h2>
-        <%= render @comments %>
+        <%= render partial: 'comments/comment', collection: @comments %>
         <%# @comments.each do |comment| %>
             <%#= render partial 'comments/comment', locals: {comment: comment}
         <%# end %>
